Updated String version for JDK changes